--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 .container {
     width: 1170px;
     margin: 0 auto;
-    border: 2px solid black;
 }
 
 .backroundWhite {
@@ -70,8 +69,8 @@ button:hover {
 /* ================ */
 
 /* =====AFTERHEADER===== */
-.afterHeader {
-    background-image: url(/img/headerBackground.svg);
+.afterHeader {  
+    background-image: url(../img/headerBackground.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
